@@ -18,6 +18,60 @@ comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more
 end_comment
 begin_import
 import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Arrays
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collection
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Iterator
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Set
+import|;
+end_import
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -153,21 +207,6 @@ name|search
 operator|.
 name|spans
 operator|.
-name|SpanNearQuery
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|search
-operator|.
-name|spans
-operator|.
 name|SpanQuery
 import|;
 end_import
@@ -240,60 +279,6 @@ operator|.
 name|util
 operator|.
 name|ToStringUtils
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|IOException
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Arrays
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Collection
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Iterator
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Map
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Set
 import|;
 end_import
 begin_comment
@@ -600,41 +585,15 @@ argument_list|(
 name|collector
 argument_list|)
 expr_stmt|;
-name|Collection
-argument_list|<
-name|byte
-index|[]
-argument_list|>
-name|collected
-init|=
+return|return
+name|checkPayloads
+argument_list|(
 name|collector
 operator|.
 name|getPayloads
 argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|match
-operator|instanceof
-name|SpanNearQuery
-condition|)
-block|{
-return|return
-name|checkCompositePayloads
-argument_list|(
-name|collected
 argument_list|)
 return|;
-block|}
-else|else
-block|{
-return|return
-name|checkOrderedPayloads
-argument_list|(
-name|collected
-argument_list|)
-return|;
-block|}
 block|}
 block|}
 return|;
@@ -762,11 +721,11 @@ argument_list|)
 return|;
 block|}
 block|}
-comment|/**    * Check to see if the collected payloads match the required set.    *    * This is called for Near span queries which collect their sub spans    * out-of-order, meaning that we can't rely on the order of payloads    * in the collection    *    * @param candidate a collection of payloads from the current Spans    * @return whether or not the payloads match    */
-DECL|method|checkOrderedPayloads
+comment|/**    * Check to see if the collected payloads match the required set.    *    * @param candidate a collection of payloads from the current Spans    * @return whether or not the payloads match    */
+DECL|method|checkPayloads
 specifier|protected
 name|AcceptStatus
-name|checkOrderedPayloads
+name|checkPayloads
 parameter_list|(
 name|Collection
 argument_list|<
@@ -803,7 +762,6 @@ name|iterator
 argument_list|()
 decl_stmt|;
 comment|//check each of the byte arrays, in order
-comment|//hmm, can't rely on order here
 for|for
 control|(
 name|byte
@@ -844,115 +802,6 @@ name|AcceptStatus
 operator|.
 name|YES
 return|;
-block|}
-else|else
-block|{
-return|return
-name|AcceptStatus
-operator|.
-name|NO
-return|;
-block|}
-block|}
-comment|/**    * Check to see if the collected payloads match the required set.    * @param candidate a collection of payloads from the current Spans    * @return whether or not the payloads match    */
-DECL|method|checkCompositePayloads
-specifier|protected
-name|AcceptStatus
-name|checkCompositePayloads
-parameter_list|(
-name|Collection
-argument_list|<
-name|byte
-index|[]
-argument_list|>
-name|candidate
-parameter_list|)
-block|{
-if|if
-condition|(
-name|candidate
-operator|.
-name|size
-argument_list|()
-operator|==
-name|payloadToMatch
-operator|.
-name|size
-argument_list|()
-condition|)
-block|{
-comment|//TODO: check the byte arrays are the same
-comment|//hmm, can't rely on order here
-name|int
-name|matches
-init|=
-literal|0
-decl_stmt|;
-for|for
-control|(
-name|byte
-index|[]
-name|candBytes
-range|:
-name|candidate
-control|)
-block|{
-comment|//Unfortunately, we can't rely on order, so we need to compare all
-for|for
-control|(
-name|byte
-index|[]
-name|payBytes
-range|:
-name|payloadToMatch
-control|)
-block|{
-if|if
-condition|(
-name|Arrays
-operator|.
-name|equals
-argument_list|(
-name|candBytes
-argument_list|,
-name|payBytes
-argument_list|)
-operator|==
-literal|true
-condition|)
-block|{
-name|matches
-operator|++
-expr_stmt|;
-break|break;
-block|}
-block|}
-block|}
-if|if
-condition|(
-name|matches
-operator|==
-name|payloadToMatch
-operator|.
-name|size
-argument_list|()
-condition|)
-block|{
-comment|//we've verified all the bytes
-return|return
-name|AcceptStatus
-operator|.
-name|YES
-return|;
-block|}
-else|else
-block|{
-return|return
-name|AcceptStatus
-operator|.
-name|NO
-return|;
-block|}
 block|}
 else|else
 block|{
