@@ -1387,6 +1387,171 @@ block|}
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testUnorderedPayloadChecks
+specifier|public
+name|void
+name|testUnorderedPayloadChecks
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SpanTermQuery
+name|term5
+init|=
+operator|new
+name|SpanTermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"five"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|SpanTermQuery
+name|term100
+init|=
+operator|new
+name|SpanTermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"hundred"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|SpanTermQuery
+name|term4
+init|=
+operator|new
+name|SpanTermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"four"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|SpanNearQuery
+name|nearQuery
+init|=
+operator|new
+name|SpanNearQuery
+argument_list|(
+operator|new
+name|SpanQuery
+index|[]
+block|{
+name|term5
+block|,
+name|term100
+block|,
+name|term4
+block|}
+argument_list|,
+literal|0
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|List
+argument_list|<
+name|byte
+index|[]
+argument_list|>
+name|payloads
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|payloads
+operator|.
+name|add
+argument_list|(
+operator|(
+literal|"pos: "
+operator|+
+literal|2
+operator|)
+operator|.
+name|getBytes
+argument_list|(
+name|StandardCharsets
+operator|.
+name|UTF_8
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|payloads
+operator|.
+name|add
+argument_list|(
+operator|(
+literal|"pos: "
+operator|+
+literal|1
+operator|)
+operator|.
+name|getBytes
+argument_list|(
+name|StandardCharsets
+operator|.
+name|UTF_8
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|payloads
+operator|.
+name|add
+argument_list|(
+operator|(
+literal|"pos: "
+operator|+
+literal|0
+operator|)
+operator|.
+name|getBytes
+argument_list|(
+name|StandardCharsets
+operator|.
+name|UTF_8
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|SpanPayloadCheckQuery
+name|payloadQuery
+init|=
+operator|new
+name|SpanPayloadCheckQuery
+argument_list|(
+name|nearQuery
+argument_list|,
+name|payloads
+argument_list|)
+decl_stmt|;
+name|checkHits
+argument_list|(
+name|payloadQuery
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|405
+block|}
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testComplexSpanChecks
 specifier|public
 name|void
